width overflow fixed

--- a/app/less/home_page.less
+++ b/app/less/home_page.less
@@ -84,7 +84,7 @@
     .parallax-image{
         background-image: url('../common/images/portfolio/fullsize/3.jpg');
         height: 100vh;
-        width: 100vw;
+        width: 100%;
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
